<resources>
    <string name="app_name">Assignment 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="LoginText">Login</string>
    <string name="LoginNameText">login name</string>
    <string name="PasswordText">Password</string>
    <string name="SwitchText">What does this do?</string>
    <string name="toastTrue">Switch is on</string>
    <string name="toastFalse">Switch is off</string>
    <string name="dialogMessage">Would you like to accept the photo and go back?</string>
    <string name="dialogTitle">Finish Activity</string>
    <string name="checkboxOk">Yes</string>
    <string name="checkboxCancel">No</string>
    <string name="checkboxResponse">my information to share</string>
    <string name="passMessage">ListItemsActivity passed:\ </string>
    <string name="chatButtonText">Start chat</string>
    <string name="sendButtonText">Send</string>
    <string name="choice1Text">Choice One</string>
    <string name="choice2Text">Choice Two</string>
    <string name="choice3Text">Choice Three</string>
    <string name="toolbarButtonText">Test Toolbar</string>
    <string name="aboutText">About</string>
    <string name="toolbarToastText">Version 1.0, by Daniil Paskal</string>
    <string name="toolbarSnackText">This is the default snackbar text</string>
    <string name="item1SnackText">You selected item 1</string>
    <string name="dialogTitleText">Do you want to go back?</string>
    <string name="dialogYesText">Yes</string>
    <string name="dialogNoText">No</string>
    <string name="newMessageText">New Message</string>
    <string name="forecastText">Weather Forecast</string>
</resources>